NXT-3291: Fix sonar issues since 5.4
(NXT-3291 Backend: Load & Provide specific version workflow)